[gd_scene load_steps=10 format=2]

[ext_resource path="res://enemy/Enemy.gd" type="Script" id=1]
[ext_resource path="res://projectiles/Bullet.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleMesh" id=1]
mid_height = 3.0

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0.203922, 1 )

[sub_resource type="CapsuleShape" id=3]
radius = 1.03919
height = 3.0953

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SphereShape" id=6]
radius = 70.0

[sub_resource type="Animation" id=7]
resource_name = "Die"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 90 ) ]
}

[node name="Enemy" type="KinematicBody" groups=[
"Damageable",
"Enemy",
]]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 2.373, 0 )
script = ExtResource( 1 )
Bullet = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.25489 )
enabled = true
cast_to = Vector3( 0, -1, -200 )

[node name="Timer2" type="Timer" parent="."]
one_shot = true

[node name="Goggles" type="MeshInstance" parent="."]
transform = Transform( 0.84, 0, 0, 0, 0.28, 0, 0, 0, 0.2, 0.0791552, 2, -0.688832 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Sight_Range" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Sight_Range"]
shape = SubResource( 6 )

[node name="Eyes" type="Spatial" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Die = SubResource( 7 )

[node name="Muzzle" type="Position3D" parent="."]
transform = Transform( -1, 0, -4.37114e-08, 0, 1, 0, 4.37114e-08, 0, -1, 0.136423, 0.423629, -2.00787 )

[node name="hitbox" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="hitbox"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[node name="hurt_timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="body_entered" from="Sight_Range" to="." method="_on_Sight_Range_body_entered"]
[connection signal="body_exited" from="Sight_Range" to="." method="_on_Sight_Range_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="hurt_timer" to="." method="_on_hurt_timer_timeout"]
